--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* .middle-div {
+.middle-div {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
   width: fit-content;
-} */
+}
