--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,19 @@
-.middle-div {
+.parent {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-  width: fit-content;
+  width: 100%;
+  height: 100px;
+}
+
+.child {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 170px;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
