--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 .parent {
   position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  /* left: 50%;
+  transform: translateX(-50%); */
   width: 100%;
   height: 100px;
 }
 
 .child {
   position: absolute;
+
   left: 50%;
   transform: translateX(-50%);
   width: 170px;
